# yoloobb_binocular

./: README.md
rs_yolov8_obb_ws/src/rs_yolov8/: CMakeLists.txt
rs_yolov8_obb_ws/src/rs_yolov8/msg/: Info.msg
rs_yolov8_obb_ws/src/rs_yolov8/scripts/: Dockerfile  detect_ros.py  hubconf.py  prune.py  prune_finetune.py
rs_yolov8_obb_ws/src/rs_yolov8/scripts/config/: yolov8obb_demo.yaml
rs_yolov8_obb_ws/src/rs_yolov8/scripts/data/scripts/: download_weights.sh
rs_yolov8_obb_ws/src/rs_yolov8/scripts/launch/: rs_yolov8.launch
rs_yolov8_obb_ws/src/rs_yolov8/scripts/models/: common.py  common_prune.py  experimental.py  yolo.py
rs_yolov8_obb_ws/src/rs_yolov8/scripts/models/hub/: anchors.yaml  yolov3-spp.yaml  yolov3-tiny.yaml  yolov3.yaml  yolov5-bifpn.yaml  yolov5-fpn.yaml  yolov5-p2.yaml  yolov5-p6.yaml  yolov5-p7.yaml  yolov5-panet.yaml  yolov5l6.yaml  yolov5m6.yaml  yolov5n6.yaml  yolov5s-ghost.yaml  yolov5s-transformer.yaml  yolov5s6.yaml  yolov5x6.yaml
rs_yolov8_obb_ws/src/rs_yolov8/scripts/models/yaml/: yolov8l.yaml  yolov8n.yaml  yolov8s.yaml
rs_yolov8_obb_ws/src/rs_yolov8/scripts/runs/train/exp/: opt.yaml  (+1 more)
rs_yolov8_obb_ws/src/rs_yolov8/scripts/tools/: mk_train.py  rename.py  roxml_to_dota.py
rs_yolov8_obb_ws/src/rs_yolov8/scripts/utils/: __init__.py  activations.py  augmentations.py  autoanchor.py  autobatch.py  callbacks.py  datasets.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
rs_yolov8_obb_ws/src/rs_yolov8/scripts/utils/loggers/: __init__.py
rs_yolov8_obb_ws/src/rs_yolov8/scripts/utils/nms_rotated/: =0.3.4  =1.6.0
(+327 files in other folders)
